--- a/assets/styles/user-signlogin-page.css
+++ b/assets/styles/user-signlogin-page.css
@@ -71,8 +71,21 @@
     text-align: center;
     margin-top: 20px;
 }
+.hcp-text a::before {
+    content: "";
+    position: absolute;
+    height: 2px;
+    width: 0%;
+    background-color: #6C4AB6;
+    bottom: -2px;
+    transition: .2s;
+}
+.hcp-text a:hover::before {
+    width: 100%;
+}
 .hcp-text a {
     color: #6C4AB6;
     font-weight: bold;
+    text-decoration: none;
+    position: relative;
 }
-.hcp-text a:hover { text-decoration: none; }
