--- a/assets/styles/user-signlogin-page.css
+++ b/assets/styles/user-signlogin-page.css
@@ -89,3 +89,19 @@
     text-decoration: none;
     position: relative;
 }
+
+.progress-bar {
+    width: 100%;
+    height: 10px;
+    background-color: #c8bfdb;
+    border-radius: 10px;
+    position: relative;
+}
+.progress-bar::before {
+    content: "";
+    background-color: #6C4AB6;
+    position: absolute;
+    height: 100%;
+    width: 33%;
+    border-radius: 10px;
+}
