--- a/assets/styles/user-signlogin-page.css
+++ b/assets/styles/user-signlogin-page.css
@@ -77,6 +77,23 @@
     cursor: not-allowed;
     transition: .2s;
 }
+.inp-sub-nito button {
+    margin-top: 10px;
+    background-color: #6C4AB6;
+    color: white;
+    border: 2px solid #6C4AB6;
+    border-radius: 5px;
+    padding: 18px 20px;
+    font-size: large;
+    font-family: 'pt sans';
+    font-weight: bold;
+    width: 100%;
+    transition: .2s;
+}
+.inp-sub-nito button:hover {
+    background-color: transparent;
+    color: #6C4AB6;
+}
 
 .hcp-text {
     text-align: center;
@@ -139,6 +156,7 @@
     outline: none;
     border: none;
     border-radius: 5px;
+    transition: .2s;
 }
 
 .gth-btn {
