--- a/assets/styles/navigation-bar.css
+++ b/assets/styles/navigation-bar.css
@@ -67,7 +67,7 @@
     font-family: 'Poppins';
     font-weight: 700;
     font-size: x-large;
-    color: rgb(255, 217, 0);
+    color: #ffd900;
     margin: 30px 0;
 }
 .nav-sidebar {
